--- a/GUI_source_code/fangcontrol.ui
+++ b/GUI_source_code/fangcontrol.ui
@@ -48,13 +48,6 @@
          <number>5</number>
         </property>
         <layout class="QGridLayout" name="gridLayout">
-         <item row="1" column="0">
-          <widget class="QLabel" name="rotate_m">
-           <property name="text">
-            <string>Stationary - Rotate</string>
-           </property>
-          </widget>
-         </item>
          <item row="2" column="0">
           <widget class="QLabel" name="walk_g1_m">
            <property name="text">
@@ -62,17 +55,17 @@
            </property>
           </widget>
          </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="rotate_m">
+           <property name="text">
+            <string>Stationary - Rotate</string>
+           </property>
+          </widget>
+         </item>
          <item row="0" column="0">
           <widget class="QLabel" name="translate_m">
            <property name="text">
             <string>Stationary - Translate</string>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="0">
-          <widget class="QLabel" name="walk_g2_m">
-           <property name="text">
-            <string>Walk - Gait 2</string>
            </property>
           </widget>
          </item>
@@ -149,12 +142,12 @@
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="2" column="2">
-        <widget class="QPushButton" name="reset_button">
+        <widget class="QPushButton" name="center_button">
          <property name="enabled">
           <bool>false</bool>
          </property>
          <property name="text">
-          <string>Reset</string>
+          <string>Center</string>
          </property>
         </widget>
        </item>
@@ -164,7 +157,7 @@
           <bool>false</bool>
          </property>
          <property name="text">
-          <string>Up</string>
+          <string>Forward</string>
          </property>
         </widget>
        </item>
@@ -234,7 +227,7 @@
           <bool>false</bool>
          </property>
          <property name="text">
-          <string>Down</string>
+          <string>Backward</string>
          </property>
         </widget>
        </item>
